# SPIM_Compulsory2

./: .gitignore  CMakeLists.txt  Collision.cpp  Compulsory2.sln  Math.cpp  Math.h  README.md  main.cpp
Components/: CameraComponent.h  HealthComponent.cpp  TransformComponent.h
Compulsory2/: Compulsory2.cpp  Compulsory2.vcxproj  MeshComponent.h
Compulsory2/Components/: HealthComponent.h  MeshComponent.h  TransformComponent.h
Compulsory2/ECS/: ComponentManager.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h
Compulsory2/Systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.h  System.h
ECS/: ComponentManager.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Mesh/: Mesh.cpp  Mesh.h
Systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
